--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,9 @@
   "name": "GitHub Diff Suppressor",
   "version": "1.0",
   "manifest_version": 2,
+  "permissions": [
+    "storage"
+  ],
   "content_scripts": [
     {
       "matches": ["*://*/*"],
