--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
   "content_scripts": [
     {
       "matches": ["*://*/*"],
-      "js": ["lib/minimatch.js", "lib/jquery.min.js", "js/suppressor.js"],
+      "js": ["js/storage.js", "lib/minimatch.js", "lib/jquery.min.js", "js/suppressor.js"],
       "run_at": "document_end"
     }
   ],
